--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>5954383장아현_HTML_과제</title>
         <style>
-            @import url("장아현.css");
+            @import url("ahhyun.css");
         </style>
     </head>
 
@@ -12,7 +12,7 @@
         <h1><b>장아현</b></h1><h2>의 홈페이지에 오신 것을 환영합니다</h2>
         <hr><br>
 
-        <img src="장아현 얼사.jpg" height="200">
+        <img src="face.jpg" height="200">
 <br><br>
     제 이름은 <i><span style="color:#a52a2a">장아현</span></i> 입니다.<br>
     저는 <span style=background-color:rgb(255,169,159)>의예과 25학번</span>이에요!<br>
@@ -64,12 +64,13 @@
         <a href="http://www.google.com" target="_blank">google 바로가기</a>
         <br>
         <br>
-        <img src="아현로그.jpg" width="150"><br>
+        <img src="blog.jpg" width="150"><br>
         <a href="https://blog.naver.com/ahjang05" target="_blank">아현이의 블로그는 요기!</a>
         <br><br>
-        <img src="아현이인스타.png" width="150"><br>
+        <img src="insta.png" width="150"><br>
         <a href="https://www.instagram.com/ah_hyun._?igsh=N3A3dmViZmcwMDgw"target="_blank">아현이 인스타</a><br>
        <iframe src="http://www.youtube.com/embed/bKTTZRnanD0" allowfullscreen name="song"></iframe><br>
        <a href="https://www.youtube.com/watch?v=GA1lzBnSWEU">favorite song</a>
         </body>
 </html>
+
